--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    onixFile_directory: '%kernel.project_dir%/public/uploads/onixFiles'
 
 services:
     # default configuration for services in *this* file
@@ -22,4 +23,11 @@ services:
             - '../src/Tests/'
 
     # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    # please note that last definitions always *replace* previous ones <-----------------------
+    App\EventListener\LastLoginEventListener:
+        tags:
+            - { name: 'kernel.event_listener', event: 'security.interactive_login' }
+
+    App\EventListener\AccessDeniedEventListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception }
